--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ name: "WTF - What's the F**!"
 title: "WTF - What's the F**!"
 description: |
   After Monday and Tuesday, even the calendar says 'WTF'.<br>
-  WTF - disappointingly for some, is an acronym of 'What's The Fun?'<br>
-  Join me, <a href="">Balajee Thachakkadu Mohan</a>; as we explore the fun side of many things under the sun<br>
+  WTF - disappointingly for some, is an acronym for 'What's The Fun?'<br>
+  Join me, <a href="about#aboutme">Balajee Thachakkadu Mohan</a>; as we explore the fun side of many things under the sun.<br>
   Let's have fun as we discard the sugarcoats!<br>
   Come let's unjargon.
 logo: 'assets/images/logo.png'
@@ -25,11 +25,49 @@ authors:
     avatar: 'assets/images/bala.png'
 #    gravatar: e56154546cf4be74e393c62d1ae9f9d4
     email: balajee.tm@gmail.com
-    web: https://balajeetm.com
+    web: https://blog.balajeetm.com
+    linkedin: https://www.linkedin.com/in/balajeetm/
     twitter: https://twitter.com/balajeetm
+    posts: true
     description: |
       A self proclaimed geek, creative genius, visionary, brave risk-taker, healthy sport, avocational writer and an astute liar. ;)<br>
       A passionate Software Techy, who is inclined towards problem solving.
+  dheeraj:
+    name: Dheeraj Kysetti
+    display_name: Dheeraj
+    linkedin: https://www.linkedin.com/in/dheeraj-kysetti-845261a/
+    post: false
+    description: |
+      Chief Architect | Tesco Technology<br>
+      Builds fault tolerant Distributed Applications that scale on-demand. Has in-depth knowledge on Distributed technologies toolkit which enable him to solve wide class of distributed problem statements at internet scale.
+  mahesh:
+    name: Mahesh Kumar R
+    posts: false
+    display_name: Mahesh Kumar
+    description: |
+      Chief Operating Officer | Expressive Life<br>
+      Entrepreneur, Innovator & Creative designer.<br>
+      Driving initiatives & business strategy to solve customer problems.
+  chandan:
+    name: Chandan Kumar Singha
+    display_name: Chandan Singha
+    web: https://chandan.xyz/
+    linkedin: https://www.linkedin.com/in/chandansingha/
+    post: false
+    description: |
+      Chief Technology Officer | Litifer Technologies<br>
+      Wears multiple hats from writing code, managing infrastructure, working on analytics, strategizing content, and evangelizing products. His interests lies in Distributed Systems, Kubernetes, cloud, security, algorithms, data structures.
+  prajwal:
+    name: Prajwal Gurumurthy
+    display_name: Prajwal Gurumurthy
+    web: https://prajwalgurumurthy.github.io/
+    linkedin: https://www.linkedin.com/in/prajwal-gurumurthy/
+    post: false
+    description: |
+      Chief Architect | Tesco Technology<br>
+      Believes simplicity is the purest form of knowledge. Responsible for 3DR[ Design, Development, Deployment and Run] of omni basket, transactional Enterprise Customer Order APIs at retail scale for TESCO.
+
+
 
 # Plugins
 plugins:
